--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <p>Stay up to date: follow us on <a href="https://twitter.com/oneshotbrussels" rel="external" title="twitter account">twitter</a></p>
       </div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-9732394-14', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
