End sentences with a dot.

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           The source for this site can be found on
           <a href="https://github.com/oneshotbrussels/oneshotbrussels.github.io" rel="external" title="website source">github</a>.
           Talk proposals are welcome in the
-          <a href="https://github.com/oneshotbrussels/oneshotbrussels.github.io/issues" rel="external" title="talk proposals">issues</a> section
+          <a href="https://github.com/oneshotbrussels/oneshotbrussels.github.io/issues" rel="external" title="talk proposals">issues</a> section.
         </p>
 
         <h1>Twitter</h1>
         <p>
-          Stay up to date: follow us on <a href="https://twitter.com/oneshotbrussels" rel="external" title="twitter account">twitter</a>
+          Stay up to date: follow us on <a href="https://twitter.com/oneshotbrussels" rel="external" title="twitter account">twitter</a>.
         </p>
       </div>
     </div>
@@ -38,7 +38,7 @@
       // Only run GA scripts when it is live.
       var a = document.createElement("a");
       a.href = document.URL;
-      
+
       if (a.hostname === 'oneshotbrussels.github.io' || a.hostname === 'brussels.nodeconf.com') {
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
