--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a href="https://www.google.be/search?q=atomium+hexagon&tbm=isch" rel="external" title="Atomium Building image search">Atomium</a>
           building, it has the shape of a hexagon!
         </p>
+        <p>The event is planned to happen in February 2015. Exact date is to be decided.</p>
 
         <h1>Propose</h1>
         <p>
